--- a/k8s-resources/k8s-resources.yaml
+++ b/k8s-resources/k8s-resources.yaml
@@ -2,10 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: k8s-resources
+  namespace: argocd
 spec:
   generators:
     - git:
-        repoURL: git@github.com:SCUBroncoSec/BroncoCTF-2023-Internal.git
+        repoURL: https://github.com/SCUBroncoSec/BroncoCTF-2023-Internal.git
         revision: HEAD
         directories:
           - path: k8s-resources/*
@@ -15,9 +16,12 @@ spec:
     spec:
       destination:
         server: https://kubernetes.default.svc
-        namespace: '{{path.basenameNormalized}}'
-      project: default
+        namespace: '{{path.basename}}'
+      project: "default"
       source:
-        repoURL: git@github.com:SCUBroncoSec/BroncoCTF-2023-Internal.git
+        repoURL: https://github.com/SCUBroncoSec/BroncoCTF-2023-Internal.git
         targetRevision: HEAD
         path: '{{path}}'
+      syncPolicy:
+        syncOptions:
+          - CreateNamespace=true
