--- a/k8s-resources/k8s-resources.yaml
+++ b/k8s-resources/k8s-resources.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   generators:
     - git:
-        repoURL: https://github.com/SCUBroncoSec/BroncoCTF-2023-Internal.git
+        repoURL: git@github.com:SCUBroncoSec/BroncoCTF-2023-Internal.git
         revision: HEAD
         directories:
           - path: k8s-resources/*
@@ -17,9 +17,9 @@ spec:
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
-      project: "default"
+      project: default
       source:
-        repoURL: https://github.com/SCUBroncoSec/BroncoCTF-2023-Internal.git
+        repoURL: git@github.com:SCUBroncoSec/BroncoCTF-2023-Internal.git
         targetRevision: HEAD
         path: '{{path}}'
       syncPolicy:
