--- a/k8s-resources/argocd/configmap-patch.yaml
+++ b/k8s-resources/argocd/configmap-patch.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: argocd-cmd-params-cm                                                                                                                                                                                                                         │
-│   namespace: argocd
+  name: argocd-cmd-params-cm
 data:
   server.insecure: "true"
