externaldns crb now in externaldns ns

--- a/k8s-resources/external-dns/externaldns.yaml
+++ b/k8s-resources/external-dns/externaldns.yaml
@@ -32,7 +32,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: external-dns
-    namespace: default # change if namespace is not 'default'
+    namespace: external-dns
 ---
 apiVersion: apps/v1
 kind: Deployment
