--- a/k8s-resources/argocd/service-argocd-server-patch.yaml
+++ b/k8s-resources/argocd/service-argocd-server-patch.yaml
@@ -2,13 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: argocd-server
-  annotations:
-    cloud.google.com/neg: '{"ingress": true}'
-    cloud.google.com/backend-config: '{"ports": {"http":"argocd-backend-config"}}'
 spec:
   selector:
     app.kubernetes.io/name: argocd-server
-  type: ClusterIP
+  type: NodePort
   ports:
   - name: http
     port: 80
