--- a/k8s-resources/ctfd/secret-ctfd-mysql-passwords.yaml
+++ b/k8s-resources/ctfd/secret-ctfd-mysql-passwords.yaml
@@ -3,4 +3,5 @@ kind: Secret
 metadata:
   name: ctfd-mysql-passwords
   annotations:
-    secret-generator.v1.mittwald.de/autogenerate: password, root_password
+    secret-generator.v1.mittwald.de/autogenerate: password,root_password
+    secret-generator.v1.mittwald.de/encoding: base64url
