--- a/Challenges/Beginner/shakespear-festival/infra/app-shakespear.yaml
+++ b/Challenges/Beginner/shakespear-festival/infra/app-shakespear.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: challenges
+  name: shakespear
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: git@github.com:SCUBroncoSec/BroncoCTF-2023-Internal.git
     targetRevision: HEAD
-    path: challenges
+    path: challenges/Beginner/shakespear-festival/infra
   destination:
     server: https://kubernetes.default.svc
