Fixed formatting issues

--- a/k8s-resources/a-little-fishy/frontendconfg-fishy.yaml
+++ b/k8s-resources/a-little-fishy/frontendconfg-fishy.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.gke.io/v1beta1
 kind: FrontendConfig
 metadata:
   name: a-little-fishy-frontend-config
-  namespace: ctfd
+  namespace: a-little-fishy
 spec:
   redirectToHttps:
     enabled: true
