Recompiled rng to support M1

--- a/Challenges/Reversing/super-secure-random/makefile
+++ b/Challenges/Reversing/super-secure-random/makefile
@@ -1,4 +1,4 @@
-targets = x86_64-linux x86_64-macos x86_64-windows
+targets = x86_64-linux x86_64-macos x86_64-windows aarch64-macos
 
 binaries: ${targets}
 
