--- a/k8s-resources/ctfd/ingress-ctfd.yaml
+++ b/k8s-resources/ctfd/ingress-ctfd.yaml
@@ -7,7 +7,7 @@ metadata:
     networking.gke.io/v1beta1.FrontendConfig: ctfd-frontend-config
     networking.gke.io/managed-certificates: ctfd-tls-cert
     kubernetes.io/ingress.class: "gce"
-    external-dns.alpha.kubernetes.io/hostname: www.broncoctf.xyz
+    external-dns.alpha.kubernetes.io/hostname: www.broncoctf.xyz, broncoctf.xyz
   labels:
     name: ctfd
 spec:
