--- a/k8s-resources/invisible-captcha/svc-captcha.yaml
+++ b/k8s-resources/invisible-captcha/svc-captcha.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: a-little-fishy
+  name: invisible-captcha
 spec:
   selector:
-    app: a-little-fishy
+    app: invisible-captcha
   ports:
   - name: http
     protocol: TCP
