--- a/Challenges/Misc/name-lookup/makefile
+++ b/Challenges/Misc/name-lookup/makefile
@@ -3,9 +3,7 @@ targets = x86_64-linux
 binaries: ${targets}
 
 ${targets}:
-	zig cc -o ./infra/NMLKP-$@ NMLKP.c
+	zig cc -o ./infra/NMLKP-$@ -target $@ NMLKP.c
 
 docker:
-	cd infra
-	docker build -t us-west2-docker.pkg.dev/broncoctf-2023/broncoctf-2023/nmlkp:latest .
-	docker push us-west2-docker.pkg.dev/broncoctf-2023/broncoctf-2023/nmlkp:latest
+	cd infra && docker build -t us-west2-docker.pkg.dev/broncoctf-2023/broncoctf-2023/nmlkp:latest . && docker push us-west2-docker.pkg.dev/broncoctf-2023/broncoctf-2023/nmlkp:latest
