--- a/k8s-resources/nc-challenges/svc-nc-chals.yaml
+++ b/k8s-resources/nc-challenges/svc-nc-chals.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: nc-chals
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: random.broncoctf.xyz, willy.broncoctf.xyz
+    external-dns.alpha.kubernetes.io/hostname: random.broncoctf.xyz, willy.broncoctf.xyz, bes.broncoctf.xyz
 spec:
   selector:
     app: nc-chals
