--- a/k8s-resources/web-challenges/managedcert-web-challenges-tls-cert.yaml
+++ b/k8s-resources/web-challenges/managedcert-web-challenges-tls-cert.yaml
@@ -1,8 +1,9 @@
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
-  name: invisible-captcha-tls-cert
-  namespace: invisible-captcha
+  name: web-challenges-tls-cert
+  namespace: web-challenges
 spec:
   domains:
+    - fishy.web.broncoctf.xyz
     - captcha.web.broncoctf.xyz
