--- a/k8s-resources/web-challenges/ingress-web-challenges.yaml
+++ b/k8s-resources/web-challenges/ingress-web-challenges.yaml
@@ -27,6 +27,7 @@ spec:
           - backend:
               service:
                 name: a-little-fishy
-                number: 80000
+                port:
+                  number: 80000
             pathType: Prefix
             path: /
