NMLKP won't work on socat, so I'll just give them the binaries

--- a/Challenges/Misc/name-lookup/makefile
+++ b/Challenges/Misc/name-lookup/makefile
@@ -5,5 +5,7 @@ binaries: ${targets}
 ${targets}:
 	zig cc -o ./infra/NMLKP-$@ -target $@ NMLKP.c
 
-docker:
-	cd infra && docker build -t us-west2-docker.pkg.dev/broncoctf-2023/broncoctf-2023/nmlkp:latest . && docker push us-west2-docker.pkg.dev/broncoctf-2023/broncoctf-2023/nmlkp:latest
+image:
+	cd infra && docker build -t us-west2-docker.pkg.dev/broncoctf-2023/broncoctf-2023/nmlkp:latest . 
+push:
+	docker push us-west2-docker.pkg.dev/broncoctf-2023/broncoctf-2023/nmlkp:latest
