--- a/Challenges/Misc/name-lookup/infra/dockerfile
+++ b/Challenges/Misc/name-lookup/infra/dockerfile
@@ -1,5 +1,8 @@
 FROM alpine/socat
 
+#Install glibc6 compatability layer
+RUN apk add libc6-compat
+
 #Copy binary to executable location
 COPY NMLKP-x86_64-linux .
 
